--- a/index.html
+++ b/index.html
@@ -153,43 +153,18 @@
             }
 
             function selecteerTimer(index) {
-                // Als er al een actieve timer is, stop die timer eerst
-                if (intervals[geselecteerdeTimer]) {
-                    // Stop de lopende timer voordat een nieuwe timer geselecteerd wordt
-                    clearInterval(intervals[geselecteerdeTimer]);
-                    intervals[geselecteerdeTimer] = null;
-
-                    // Stop het timer-geluid
-                    timerSound.pause();  
-                    timerSound.currentTime = 0;  
-                    
-                    // Zet de finaleGeluidGespeeld flag terug naar false voor de timer die gestopt is
-                    finaleGeluidGespeeld[geselecteerdeTimer] = false;
-                }
-
-                // Zorg ervoor dat de geselecteerde timer geen invloed heeft op andere timers
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
 
-                // Reset de pointer-events voor alle timers (schakel ze uit voor alle timers behalve de geselecteerde)
-                document.querySelectorAll(".timer").forEach((el, i) => {
-                    if (i !== geselecteerdeTimer) {
-                        el.style.pointerEvents = "none";  // Blokkeer interactie met andere timers
-                    }
-                });
-
-                // Markeer de geselecteerde timer
                 const selectedTimerRef = firebase.database().ref('selectedTimer');
                 selectedTimerRef.set(index);
             }
 
             // Start de timer en speel het geluid af
             function startTimer() {
-                if (intervals[geselecteerdeTimer]) return; // Voorkom dubbele timers
-
-                // Start de geselecteerde timer
+                if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
@@ -197,21 +172,29 @@
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0) {
                         // Stop het timer-geluid als de timer op 0 komt
-                        timerSound.pause();
-                        timerSound.currentTime = 0;
+                        timerSound.pause();  // Stop het timer-geluid
+                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
 
                         // Speel het timer-geluid af
-                        timerSoundRef.set(true);
+                        timerSoundRef.set(true);  // Zet timer geluid aan via Firebase
 
                         // Speel het finale geluid af (1x per timer)
                         if (!finaleGeluidGespeeld[geselecteerdeTimer]) {
                             finaleSound.play().catch((error) => {
                                 console.log("Finale geluid kon niet worden afgespeeld:", error);
                             });
-                            finaleGeluidGespeeld[geselecteerdeTimer] = true;
+                            finaleGeluidGespeeld[geselecteerdeTimer] = true; // Zorg ervoor dat het niet opnieuw wordt afgespeeld
                         }
                     }
                 }, 1000);
+
+                // Blokkeer de andere timers door pointer-events uit te schakelen
+                document.querySelectorAll(".timer").forEach(el => {
+                    el.style.pointerEvents = "none";
+                });
+
+                // Zet de finaleGeluidGespeeld vlag terug naar false wanneer de timer opnieuw wordt gestart
+                finaleGeluidGespeeld[geselecteerdeTimer] = false;  // Finale geluid kan opnieuw afspelen als timer opnieuw start
             }
 
             // Stop de timer en stop het geluid, speel het stop geluid af
@@ -220,13 +203,13 @@
                 intervals[geselecteerdeTimer] = null;
 
                 // Stop het timer-geluid
-                timerSound.pause();
-                timerSound.currentTime = 0;
-
+                timerSound.pause();  // Stop het timer-geluid
+                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                
                 // Zet het stopgeluid aan via Firebase
-                stopSoundRef.set(true);
+                stopSoundRef.set(true);  // Zet het stopgeluid aan in Firebase
 
-                // Zet de pointer-events weer aan voor alle timers
+                // Zet de pointer-events weer aan voor de timers
                 document.querySelectorAll(".timer").forEach(el => {
                     el.style.pointerEvents = "auto";
                 });
@@ -623,3 +606,6 @@
     </div>
 </body>
 </html>
+
+
+Ik wil de view=display pagina ook nog goed inregelen. qua functionaliteit werkt die goed. Mensen zien alleen de timers en kunnen niks doen op de pagina, maar het geluid word nog niet gesynchroniseerd. Is dat mogelijk? En zijn er verder dingen die aangepast moeten worden?
