--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f5f5f5;
+            background-color: #EC8975;
         }
         h1 {
             font-size: 80px;
@@ -482,7 +482,7 @@
             align-items: center;
             font-size: 70px;
             font-weight: bold;
-            color: red;
+            color: #E65B00;
             background-color: white;
             border-radius: 20px;
             text-align: center;
