--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
         }
         h1 {
             font-size: 80px;
+            display: none;
         }
         .timer-container {
             display: flex;
