--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #EC8975;
+            background-color: #970708;
         }
         h1 {
             font-size: 80px;
@@ -483,8 +483,8 @@
             align-items: center;
             font-size: 70px;
             font-weight: bold;
-            color: #E65B00;
-            background-color: white;
+            color: black;
+            background-color: #970708;
             border-radius: 20px;
             text-align: center;
         }
@@ -517,9 +517,9 @@
             flex-wrap: wrap;
         }
         button {
-            background-color: red;
-            color: white;
-            border: none;
+            background-color: #E65B00;
+            color: Black;
+            border: none
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
