--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         .timer {
             width: 300px;
             height: 300px;
-            border: 6px solid white;
+            border: 8px solid #E65B00;
             display: flex;
             flex-direction: column;
             justify-content: center;
