--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         .timer {
             width: 300px;
             height: 300px;
-            border: 8px solid #E65B00;
+            border: 6px solid black;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -527,7 +527,7 @@
             max-width: 120px;
         }
         .selected {
-            border: 6px solid red;
+            border: 8px solid #E65B00;
         }
 
         @media (max-width: 768px) {
