--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #970708;
+            background-color: #650409;
         }
         h1 {
             font-size: 80px;
@@ -476,15 +476,15 @@
         .timer {
             width: 300px;
             height: 300px;
-            border: 6px solid black;
+            border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             font-size: 70px;
             font-weight: bold;
-            color: black;
-            background-color: #970708;
+            color: white;
+            background-color: #650409;
             border-radius: 20px;
             text-align: center;
         }
@@ -517,7 +517,7 @@
             flex-wrap: wrap;
         }
         button {
-            background-color: #E65B00;
+            background-color: #F28E00;
             color: Black;
             border: none
             padding: 10px;
@@ -527,7 +527,7 @@
             max-width: 120px;
         }
         .selected {
-            border: 8px solid #E65B00;
+            border: 8px solid #F28E00;
         }
 
         @media (max-width: 768px) {
