--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         .team-name {
             font-size: 30px;
             font-weight: bold;
-            color: black;
+            color: solid white;
             cursor: pointer;
             margin-bottom: 20px;
         }
