--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
             flex-wrap: wrap;
         }
         button {
-            background-color: #F28E00;
-            color: Black;
+            background-color: #FFAA00;
+            color: black;
             border: none
             padding: 10px;
             font-size: 14px;
@@ -527,7 +527,7 @@
             max-width: 120px;
         }
         .selected {
-            border: 8px solid #F28E00;
+            border: 8px solid #FFAA00;
         }
 
         @media (max-width: 768px) {
