--- a/index.html
+++ b/index.html
@@ -550,9 +550,10 @@
     }
 
     .display-mode .timer-container {
-        margin: 40px auto;
-        max-width: 95vw;
-    }
+    margin: 60px auto;
+    max-width: 1000px;
+    padding: 0 20px;
+}
 
     @media (max-width: 768px) {
         .timer-container {
