--- a/index.html
+++ b/index.html
@@ -558,7 +558,29 @@
 
     /* Responsieve styling alleen voor NIET-display mode */
     @media (max-width: 768px) {
-        body:not(.display-mode) .timer {
+    body:not(.display-mode) .timer {
+        width: 230px;
+        height: 230px;
+        font-size: 50px;
+    }
+
+    body:not(.display-mode) .timer-container {
+        flex-direction: row;
+    }
+
+    body:not(.display-mode) .team-name {
+        font-size: 18px;
+    }
+
+    body:not(.display-mode) .controls {
+        width: 90%;
+    }
+
+    body:not(.display-mode) button {
+        font-size: 12px;
+    }
+}
+</style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
