--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     .timer {
         width: 300px;
         height: 300px;
-        border: 6px solid #F8AF00;
+        border: 6px solid white;
         display: flex;
         flex-direction: column;
         justify-content: center;
