--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
 
       // Zorg dat de timers weer vrijgegeven worden zodra ze op 0 staan
       document.querySelectorAll(".timer").forEach(el => el.style.pointerEvents = "auto");
+       // Maak de dropdown weer beschikbaar
+      document.getElementById("timerSelect").removeAttribute("disabled");
     }
   }, 1000);
 
