--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#650409">        
     <title>De Slimste Kameraad</title>
     <!-- Oude versie van Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -360,7 +362,13 @@ function resetTimer() {
     } else {
       document.getElementById("timerSelect").setAttribute("disabled", true);
     }
-  });
+// ✅ Service Worker registratie voor PWA
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+      .then(() => console.log('✅ Service Worker geregistreerd'))
+      .catch(err => console.error('❌ Service Worker fout:', err));
+  }
+    });
 </script>
     <style>
     body {
